# pkg/model/user.go
@@ -7,3 +7,10 @@ type User struct {
 	RegistrationDate string `json:"registration_date" datetime_format:"YYYY-MM-DD"`
 	Role             string `json:"role"`
 }
+
+type UserInputResponse struct {
+	FullName         string `json:"full_name"`
+	Email            string `json:"email"`
+	RegistrationDate string `json:"registration_date" datetime_format:"YYYY-MM-DD"`
+	Role             string `json:"role"`
+}
